--- a/src/android/UniNotifier_ru_ru.resx
+++ b/src/android/UniNotifier_ru_ru.resx
@@ -233,9 +233,10 @@
 
 3. Если я всё же где-то ошибусь (что немало вероятно), прошу также мне об этом сообщать. При таком названии группы не хочется ударять в грязь лицом.
 
-4. Мы следуем Политике сообществ (https://vk.com/@rdaaow_fupl-scp). Поэтому рекламы в обозримом будущем здесь не будет. Да и комментарии тут ни к чему. Но советы, пожелания и конструктивная критика приветствуются. Поэтому Вы всегда можете отправить сообществу сообщение.
+4. Мы следуем Политике социальных сообществ (SCP). Поэтому рекламы в обозримом будущем здесь не будет. Да и комментарии тут ни к чему. Но советы, пожелания и конструктивная критика приветствуются. Поэтому Вы всегда можете отправить сообществу сообщение.
 
 P.S. Очень надеюсь, что Вам понравится юмор, который почти не подчёркивается Word'ом!
+
 С уважением, Nicolay B. aka RD AAOW</value>
   </data>
   <data name="GMJButton" xml:space="preserve">
