--- a/src/android/UniNotifier_en_us.resx
+++ b/src/android/UniNotifier_en_us.resx
@@ -384,7 +384,7 @@
 • The main notifications log is available on the first page of application. It will be opened on every further start of UniNotifier</value>
   </data>
   <data name="Tip03_1" xml:space="preserve">
-    <value>Warning! Some devices are requiring manual unlocking of internet access (f.e., in case of internet traffic saving mode) for the app. Check it if you will not get</value>
+    <value>Warning! Some devices are requiring manual unlocking of internet access (f.e., in case of internet traffic saving mode) for the app. Check it if you will not get notifications</value>
   </data>
   <data name="Tip03_2" xml:space="preserve">
     <value>.
