--- a/src/android/UniNotifier_en_us.resx
+++ b/src/android/UniNotifier_en_us.resx
@@ -180,8 +180,8 @@
   <data name="CommunityTG" xml:space="preserve">
     <value>Telegram feed</value>
   </data>
-  <data name="CommunityVK" xml:space="preserve">
-    <value>Main community</value>
+  <data name="CommunityWelcome" xml:space="preserve">
+    <value>Welcome page</value>
   </data>
   <data name="CurlyTemplate" xml:space="preserve">
     <value>Remember to replace items enclosed in curly braces (including parts of webpage's link) with what you want</value>
