--- a/src/UniNotifier_ru_ru.resx
+++ b/src/UniNotifier_ru_ru.resx
@@ -333,4 +333,9 @@
   <data name="SettingsForm_WindowCallFlag" xml:space="preserve">
     <value>Показывать главное окно при срочных уведомлениях</value>
   </data>
+  <data name="Tip_12" xml:space="preserve">
+    <value>Эта функция позволяет установить числовой порог. Он будет сравниваться с первым номером в каждом полученном тексте с использованием указанного метода сравнения. Если новый текст соответствует условию, приложение отобразит специальное предупреждение.
+
+Также возможно отображение уведомления только при соблюдении этого условия</value>
+  </data>
 </root>
