--- a/src/UniNotifier_en_us.resx
+++ b/src/UniNotifier_en_us.resx
@@ -143,7 +143,7 @@ In addition, the utility automatically requests new records with specified updat
     <value>&amp;Settings</value>
   </data>
   <data name="MainMenuOption03" xml:space="preserve">
-    <value>&amp;About</value>
+    <value>&amp;About the app</value>
   </data>
   <data name="MainMenuOption04" xml:space="preserve">
     <value>&amp;Quit</value>
